--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -34,11 +34,14 @@
                 }
 
                 .input-alert {
-                    font-size: 12px;
+                    font-size: 14px;
                     color: red;
                     font-weight: 500;
                     letter-spacing: .1px;
-                    
+                    margin-top: 5px;
+                    display: inline-block;
+                    margin-left: 5px;
+
                     &.hide {
                         display: none;
                     }
@@ -75,7 +78,7 @@
                     left: 0;
                     width: 100%;
                     height: 1px;
-                    background: #858585;
+                    background: #e2e2e2;
                     z-index: -1;
                 }
 
@@ -92,7 +95,7 @@
                 padding: 8px 20px;
                 border-radius: 5px;
                 width: 100%;
-                background: #e9ecef;
+                background: $white-color;
 
                 svg {
                     font-size: 22px;
