--- a/src/components/CheckoutInfo/CheckoutInfo.scss
+++ b/src/components/CheckoutInfo/CheckoutInfo.scss
@@ -25,7 +25,7 @@
                 .form-control {
                     margin-bottom: 15px;
                     height: 45px;
-                    border-radius: 0;
+                    border-radius: 5px;
                     background: rgba(3, 0, 71, 0.09);
 
                     &:focus {
