--- a/src/pages/User/User.scss
+++ b/src/pages/User/User.scss
@@ -3,6 +3,7 @@
 .user-profile {
     padding: 100px 0;
     background: #dee2e6;
+    height: 100vh;
 
     .user-sidebar {
         background: $white-color;
