--- a/src/components/CheckoutInfo/CheckoutInfo.scss
+++ b/src/components/CheckoutInfo/CheckoutInfo.scss
@@ -4,7 +4,7 @@
     padding: 150px 0 100px;
     background: rgba(3, 0, 71, 0.09);
 
-    .address-wrapper {
+    .address-form {
         padding: 40px 30px;
         background: $white-color;
 
@@ -13,7 +13,7 @@
             margin-bottom: 30px;
         }
 
-        .address-form {            
+        .address-wrapper {  
             .form-group {
                 margin-bottom: 25px;
 
@@ -31,6 +31,14 @@
                     &:focus {
                         border: 1px solid $black-color;
                         box-shadow: none;
+                    }
+                }
+
+                &.create-account {
+                    input {
+                        margin-right: 5px;
+                        bottom: -1px;
+                        position: relative;
                     }
                 }
             }
@@ -74,6 +82,20 @@
         h3 {
             font-size: 25px;
             margin-bottom: 30px;
+        }
+
+        .payment-list {
+            padding: 0;
+            margin: 0;
+
+            li {
+                list-style: none;
+                margin: 10px 0;
+
+                input {
+                    margin-right: 5px;
+                }
+            }
         }
 
         .payment-btn {
