--- a/src/shared/Navbar/Navbar.scss
+++ b/src/shared/Navbar/Navbar.scss
@@ -33,7 +33,8 @@
         display: flex;
         align-items: center;
 
-        .header-signin, .header-account {
+        .header-signin, 
+        .header-account {
             color: #eceef3;
             background: $black-color;
             padding: 10px 20px;
@@ -65,7 +66,6 @@
             height: 40px;
             border-radius: 5px;
             color: $black-color;
-            box-shadow: rgba(50, 50, 93, 0.2) 0px 5px 3px -5px, rgba(0, 0, 0, 0.5) 0px 0px 1px 0px;
 
             .cart-item {
                 position: absolute;
