--- a/src/components/CheckoutInfo/CheckoutInfo.scss
+++ b/src/components/CheckoutInfo/CheckoutInfo.scss
@@ -5,53 +5,95 @@
     background: rgba(3, 0, 71, 0.09);
 
     .address-form {
-        padding: 40px 30px;
-        
+        border-radius: 10px;
+        margin-bottom: 20px;
+        background: $white-color;
+        padding: 30px;
+
         h3 {
-            font-size: 25px;
+            font-size: 20px;
             margin-bottom: 30px;
+            text-transform: uppercase;
         }
 
-        .address-wrapper {  
-            .form-group {
-                margin-bottom: 25px;
+        .form-group {
+            margin-bottom: 25px;
 
-                label {
-                    margin-bottom: 2px;
+            label {
+                margin-bottom: 5px;
+                font-size: 16px;
+                color: $black-color;
+            }
+
+            .form-control {
+                margin-bottom: 15px;
+                height: 45px;
+                border-radius: 5px;
+                border: 0px transparent;
+                background: rgba(3, 0, 71, 0.035);
+                color: $black-color;
+                font-weight: 500;
+
+                &:focus {
+                    box-shadow: none;
+                }
+
+                &::placeholder {
                     font-size: 14px;
-                }
-
-                .form-control {
-                    margin-bottom: 15px;
-                    height: 45px;
-                    border-radius: 5px;
-                    background: rgba(3, 0, 71, 0.09);
-
-                    &:focus {
-                        border: 1px solid $black-color;
-                        box-shadow: none;
-                    }
-                }
-
-                &.create-account {
-                    input {
-                        margin-right: 5px;
-                        bottom: -1px;
-                        position: relative;
-                    }
+                    font-weight: 400;
                 }
             }
         }
     }
 
-    .checkout-summary {
-        padding: 40px 30px;
+    .payment-info {
+        border-radius: 10px;
         background: $white-color;
-        margin-bottom: 20px;
+        padding: 30px;
 
         h3 {
-            font-size: 25px;
+            font-size: 20px;
             margin-bottom: 30px;
+            text-transform: uppercase;
+        }
+
+        .payment-list {
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            
+            li {
+                list-style: none;
+                margin: 10px 0;
+
+                input {
+                    margin-right: 5px;
+                }
+            }
+        }
+
+        .payment-btn {
+            background: $black-color;
+            color: $white-color;
+            border: 1px solid $black-color;
+            padding: 10px 20px;
+            border-radius: 5px;
+            width: 100%;
+            margin-top: 20px;
+        }
+    }
+
+    .checkout-summary {
+        padding: 30px;
+        background: $white-color;
+        border-radius: 10px;
+
+        h3 {
+            font-size: 20px;
+            margin-bottom: 30px;
+            text-transform: uppercase;
         }
 
         ul {
@@ -71,39 +113,6 @@
                     font-weight: 500;
                 }
             }
-        }
-    }
-
-    .payment-info {
-        padding: 40px 30px;
-        background: $white-color;
-
-        h3 {
-            font-size: 25px;
-            margin-bottom: 30px;
-        }
-
-        .payment-list {
-            padding: 0;
-            margin: 0;
-
-            li {
-                list-style: none;
-                margin: 10px 0;
-
-                input {
-                    margin-right: 5px;
-                }
-            }
-        }
-
-        .payment-btn {
-            background: $black-color;
-            color: $white-color;
-            border: 1px solid $black-color;
-            padding: 10px 20px;
-            border-radius: 5px;
-            width: 100%;
         }
     }
 }
