--- a/src/components/CheckoutInfo/CheckoutInfo.scss
+++ b/src/components/CheckoutInfo/CheckoutInfo.scss
@@ -61,8 +61,7 @@
             padding: 0;
             margin: 0;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: column;
             
             li {
                 list-style: none;
