--- a/src/components/CheckoutInfo/CheckoutInfo.scss
+++ b/src/components/CheckoutInfo/CheckoutInfo.scss
@@ -44,6 +44,15 @@
                 }
             }
         }
+        
+        .address-btn {
+            background: $black-color;
+            color: $white-color;
+            border: 1px solid $black-color;
+            padding: 10px 20px;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
     }
 
     .payment-info {
@@ -60,27 +69,30 @@
         .payment-list {
             padding: 0;
             margin: 0;
-            display: flex;
-            flex-direction: column;
-            
-            li {
-                list-style: none;
-                margin: 10px 0;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
 
-                input {
-                    margin-right: 5px;
+            .payment-option {
+                padding: 10px 20px;
+                border: 1px solid #e5e5e5;
+                cursor: pointer;
+                display: flex;
+                justify-content: space-between;
+
+                svg {
+                    font-size: 18px;
+                    top: -1px;
+                    position: relative;
                 }
+                span {
+                    margin-left: 8px;
+                }
+                input { 
+                    accent-color: $black-color; 
+                    width: 15px;
+                } 
             }
-        }
-
-        .payment-btn {
-            background: $black-color;
-            color: $white-color;
-            border: 1px solid $black-color;
-            padding: 10px 20px;
-            border-radius: 5px;
-            width: 100%;
-            margin-top: 20px;
         }
     }
 
