--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -6,4 +6,4 @@ $black-color: #222222;
 $gray-color: #858585;
 
 //== Fonts Variables
-$theme-font: 'Poppins', sans-serif;
+$theme-font: 'Josefin Sans', sans-serif;
