--- a/src/components/CartItems/CartItems.scss
+++ b/src/components/CartItems/CartItems.scss
@@ -1,12 +1,12 @@
 @import '../../assets/scss/style.scss';
 
 .cart-section {
-    padding-top: 100px;
+    padding-top: 200px;
     padding-bottom: 70px;
 
     .title {
-        font-size: 26px;
-        margin-bottom: 20px;
+        font-size: 36px;
+        margin-bottom: 50px;
     }
 
     .cart-box {
@@ -14,10 +14,13 @@
             width: 100%;
 
             thead {
+                border-bottom: 1px solid #e9e9e9;
+                
                 tr {
                     th {
-                        padding: 10px 25px;
-                        background: #f0f0f0;
+                        padding: 8px 15px;
+                        font-size: 14px;
+                        font-weight: 500;
                     }
                 }
             }
@@ -25,10 +28,11 @@
             tbody {
                 tr {
                     td {
-                        padding: 10px 25px;
+                        padding: 8px 15px;
 
                         .pd-img {
-                            max-width: 100px;
+                            max-width: 70px;
+                            margin-right: 20px;
                         }
 
                         .delete-cart {
@@ -39,19 +43,41 @@
                             padding: 0;
                         }
                     }
+
+                    .cart-quantity {
+                        input {
+                            width: 60px;
+                            position: relative;
+                            border: none;
+                            text-align: center;
+                        }
+
+                        .quantity-btn {
+                            all: unset;
+                            cursor: pointer;
+                            border: 1px solid #d8d8d8;
+                            border-radius: 20px;
+                            width: 25px;
+                            height: 25px;
+                            text-align: center;
+                            line-height: 20px;
+                        }
+                    }
                 }
             }
         }
     }
 
     .cart-total {
-        border: 1px solid #d4d4d4;
         border-radius: 10px;
         padding: 20px;
-
+        box-shadow: 0 30px 70px #010f1c1a;
+        
         h3 {
             font-size: 20px;
             margin-bottom: 25px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #e8e8e8;
         }
 
         p {
@@ -59,10 +85,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            font-size: 18px;
 
             span {
                 font-size: 20px;
-                font-weight: 600;
+                font-weight: 500;
             }
         } 
 
@@ -74,6 +101,8 @@
         transition: .3s linear;
         margin-top: 25px;
         width: 100%;
+        text-align: center;
+        border-radius: 8px;
 
         &:hover {
             background: $white-color;
