--- a/src/components/OrderSummary/OrderSummary.scss
+++ b/src/components/OrderSummary/OrderSummary.scss
@@ -3,11 +3,13 @@
 .checkout-summary {
     padding: 30px;
     border-radius: 10px;
+    box-shadow: 0 30px 70px #010f1c1a;
 
     h3 {
         font-size: 20px;
-        margin-bottom: 30px;
-        text-transform: uppercase;
+        margin-bottom: 25px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid #e8e8e8;
     }
 
     .order-info {
