--- a/src/pages/Checkout/Checkout.scss
+++ b/src/pages/Checkout/Checkout.scss
@@ -1,18 +1,17 @@
 @import '../../assets/scss/variables.scss';
 
 .checkout-wrapper {
-    padding-top: 150px;
+    padding: 200px 0 70px;
 
     .address-form {
         border-radius: 10px;
         margin-bottom: 20px;
         background: $white-color;
-        padding: 30px;
+        padding-right: 50px;
 
         h3 {
-            font-size: 20px;
-            margin-bottom: 30px;
-            text-transform: uppercase;
+            font-size: 36px;
+            margin-bottom: 50px;
         }
 
         .form-group {
@@ -29,7 +28,7 @@
                 height: 45px;
                 border-radius: 5px;
                 border: 0px transparent;
-                background: rgba(3, 0, 71, 0.035);
+                background: #dee2e6;
                 color: $black-color;
                 font-weight: 500;
 
@@ -43,55 +42,5 @@
                 }
             }
         }
-    }
-    
-    .payment-info {
-        border-radius: 10px;
-        background: $white-color;
-        padding: 30px;
-
-        h3 {
-            font-size: 20px;
-            margin-bottom: 30px;
-            text-transform: uppercase;
-        }
-
-        .payment-list {
-            padding: 0;
-            margin: 0;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
-
-            .payment-option {
-                padding: 10px 20px;
-                border: 1px solid #e5e5e5;
-                cursor: pointer;
-                display: flex;
-                justify-content: space-between;
-
-                svg {
-                    font-size: 18px;
-                    top: -1px;
-                    position: relative;
-                }
-                span {
-                    margin-left: 8px;
-                }
-                input { 
-                    accent-color: $black-color; 
-                    width: 15px;
-                } 
-            }
-        }
-    }
-    
-    .address-btn {
-        background: $black-color;
-        color: $white-color;
-        border: 1px solid $black-color;
-        padding: 10px 20px;
-        border-radius: 5px;
-        margin-top: 20px;
     }
 }
