--- a/src/components/CartItems/CartItems.scss
+++ b/src/components/CartItems/CartItems.scss
@@ -30,7 +30,7 @@
             tbody {
                 tr {
                     td {
-                        padding: 8px 15px;
+                        padding: 15px 15px 25px;
 
                         .pd-img {
                             max-width: 70px;
