--- a/src/components/OrderSummary/OrderSummary.scss
+++ b/src/components/OrderSummary/OrderSummary.scss
@@ -54,6 +54,21 @@
                 font-weight: 500;
             }
         }
+    }
 
-}
+    .total-ammount {
+        padding-top: 15px;
+        border-top: 1px solid #eee;
+        display: flex;
+        justify-content: space-between;
+
+        p {
+            color: $black-color;
+            font-size: 18px;
+        }
+
+        span {
+            font-size: 20px;
+        }
+    }
 }
