--- a/src/shared/Navbar/Navbar.scss
+++ b/src/shared/Navbar/Navbar.scss
@@ -56,6 +56,8 @@
     
                 svg {
                     margin-right: 10px;
+                    top: -2px;
+                    position: relative;
                 }
             }
     
